Update MavenArtifactResolver.java